feat(merge): revalidate original bot updates
